--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ body {
     padding: 2rem;
     width: 80%;
     margin: 0 auto 0 auto;
+    height: 100vh;
 }
 
 .menu-btn {
@@ -57,7 +58,6 @@ body {
 .navbar {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid var(--Darkgrayishblue)
 }
 
 .nav-left {
@@ -75,7 +75,6 @@ body {
     gap: 30px;
     align-items: center;
     width: 100%;
-    cursor: pointer;
 }
 
 .nav-links a {
@@ -105,16 +104,172 @@ body {
     display: flex;
     align-items: center;
     gap: 4rem;
+
 }
 
 .avatar img {
     width: 45px;
     height: 45px;
+    cursor: pointer;
+}
+
+.cart-btn img {
+    cursor: pointer;
+}
+
+hr {
+    margin-top: 25px;
+}
+
+.page-content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    column-gap: 5rem;
+    padding: 3rem;
+}
+
+.page-image {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
 
 }
 
+.main-img img {
+    display: none;
+}
+
+.active img {
+    display: flex;
+    width: 60%;
+    border-radius: 15px;
+    margin: 0 auto 0 auto;
+    cursor: pointer;
+}
+
+
+.main-img img {}
+
+.thumb-img {
+    display: flex;
+    gap: 20px;
+    margin-top: 35px;
+    align-items: center;
+    justify-content: center;
+}
+
+.thumb-img img {
+    border-radius: 12px;
+    height: 60px;
+    width: 60px;
+    object-fit: cover;
+    cursor: pointer;
+}
+
+.thumb-img .active {
+    opacity: 70%;
+    border: 2px solid var(--Orange);
+}
+
+.page-texts {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.page-texts h3 {
+    font-weight: 600;
+    color: var(--Darkgrayishblue);
+    font-size: 13px;
+    line-height: 3px;
+    letter-spacing: 2px;
+}
+
+.page-texts p {
+    color: var(--Darkgrayishblue);
+    line-height: 20px;
+    font-size: 15px;
+}
+
+.price-section {
+    display: flex;
+    flex-direction: column;
+    gap: 0.6rem;
+}
+
+.price-section .new-price {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
+
+.new-price h2 {
+    letter-spacing: 2px;
+    font-weight: 700;
+}
+
+.new-price span {
+    background: var(--Black);
+    border-radius: 2px;
+    color: var(--White);
+    padding: 5px;
+    font-size: 11px;
+}
+
+.old-price h4 {
+    color: var(--Darkgrayishblue);
+    text-decoration: line-through;
+}
+
+.cart-add {
+    display: flex;
+    gap: 20px;
+    width: 100%;
+
+}
+
+.quantity {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    background-color: var(--Lightgrayishblue);
+    padding: 5px;
+    border-radius: 3px;
+}
+
+.quantity img{
+    cursor: pointer;
+}
+
+.lower-cart {
+    width: 60%;
+}
+
+.lower-cart-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    background-color: var(--Orange);
+    border: none;
+    padding: 9px;
+    width: 100%;
+    border-radius: 5px;
+    font-weight: 700;
+    cursor: pointer;
+    
+}
+
+
+
+
 
 /* -------Responsive--------- */
+
+
+
 @media screen and (max-width:576px) {
     .container {
         width: 100%;
@@ -126,15 +281,25 @@ body {
         border-bottom: none;
     }
 
+    .nav-left {
+        display: flex;
+        align-items: center;
+    }
+
     .menu-btn {
         display: inline-block;
+        cursor: pointer;
+    }
+
+    .nav-links {
+        display: none;
     }
 
     .nav-links img {
         display: inline-block;
     }
 
-    .nav-links {
+    .nav-links.active {
         display: flex;
         flex-direction: column;
         position: absolute;
@@ -142,10 +307,11 @@ body {
         left: 0px;
         flex-wrap: wrap;
         align-items: flex-start;
-        width:100%;
+        width: 100%;
         max-width: 220px;
         background: white;
         padding: 1rem;
+        height: 100vh;
     }
 
     .nav-links a {
@@ -155,9 +321,16 @@ body {
 
     }
 
-    .nav-left {
-        display: flex;
-        align-items: center;
+
+    .nav-left .backdrop.active {
+        background-color: var(--Black);
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        height: 100vh;
+        width: 100vw;
+        opacity: 60%;
     }
 
     .nav-right {
